--- a/mmNets-2023-web/_includes/head.html
+++ b/mmNets-2023-web/_includes/head.html
@@ -7,7 +7,7 @@
     <title>mmNets 2023 | ACM MobiCom 2023</title>
 
     <!-- css -->
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="mmNets-2023-web/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="mmNets-2023-web/bower_components/ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="mmNets-2023-web/assets/css/main.css">
 </head>
